@@ -1,5 +1,4 @@
 import de.undercouch.gradle.tasks.download.Download
-import org.gradle.internal.jvm.Jvm
 
 plugins {
     // https://plugins.gradle.org/plugin/com.github.johnrengelman.shadow (v5 requires Gradle 5)
@@ -7,15 +6,10 @@ plugins {
     // https://plugins.gradle.org/plugin/de.undercouch.download
     id "de.undercouch.download" version "4.0.0"
     id 'java'
-    // TODO: Migrate to newer version: https://github.com/tbroyer/gradle-errorprone-plugin#migration-from-versions-00x
-    id "net.ltgt.errorprone-base" version "0.0.13"
+    // https://github.com/tbroyer/gradle-errorprone-plugin
+    id "net.ltgt.errorprone" version "0.8.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '3.1.1' apply false
-
-    // To update version numbers of dependencies in this file, run: ./gradlew useLatestVersions
-    // (Not necessary if using dependabot to update dependencies.)
-    id 'se.patrikerdes.use-latest-versions' version '0.2.12'
-    id 'com.github.ben-manes.versions' version '0.21.0'
 }
 apply plugin: "de.undercouch.download"
 
@@ -28,7 +22,12 @@ repositories {
 
 ext {
     release = false
-    assert JavaVersion.current() == JavaVersion.VERSION_1_8: "Set JAVA_HOME to JDK 8. Current version is ${JavaVersion.current()}"
+
+    // On a Java 8 JVM, use error-prone javac and source/target 8.
+    // On a Java 9+ JVM, use the host javac, default source/target, and required module flags.
+    isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
+
+    errorproneJavacVersion = '9+181-r4173-1'
 
     parentDir = file("${rootDir}/../").absolutePath
 
@@ -70,14 +69,14 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'com.github.johnrengelman.shadow'
     apply plugin: "de.undercouch.download"
-    apply plugin: 'net.ltgt.errorprone-base'
+    apply plugin: 'net.ltgt.errorprone'
 
     group 'org.checkerframework'
     // Increment the minor version rather than just the patch level if:
     //   * any new checkers have been added,
     //   * the patch level is 9 (keep the patch level as a single digit), or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '2.9.0'
+    version '2.11.0'
 
     repositories {
         mavenCentral()
@@ -85,13 +84,14 @@ allprojects {
 
     configurations {
         javacJar
-        toolsJar
     }
 
     dependencies {
-        javacJar 'org.checkerframework:compiler:2.4.0'
-        // Change the JDK via -Dorg.gradle.java.home=JDK_PATH
-        toolsJar files(Jvm.current().toolsJar)
+        if (isJava8) {
+            javacJar group: 'com.google.errorprone', name: 'javac', version: "$errorproneJavacVersion"
+        }
+
+        errorproneJavac("com.google.errorprone:javac:$errorproneJavacVersion")
     }
 
     // After all the tasks have been created, modify some of them.
@@ -108,15 +108,14 @@ allprojects {
                 classpath += files(project(':checker').tasks.getByName('shadowJar').archivePath)
                 options.taglets 'org.checkerframework.taglet.ManualTaglet'
                 options.tagletPath(project(':framework-test').sourceSets.taglet.output.classesDirs.getFiles() as File[])
-                options.links = ['https://docs.oracle.com/javase/8/docs/api/', 'https://docs.oracle.com/javase/8/docs/jdk/api/javac/tree/']
+                options.links = ['https://docs.oracle.com/en/java/javase/11/docs/api/', 'https://docs.oracle.com/en/java/javase/11/docs/jdk/api/javac/tree/']
                 // This file is looked for by Javadoc.
                 file("${destinationDir}/resources/fonts/").mkdirs()
                 ant.touch(file: "${destinationDir}/resources/fonts/dejavu.css")
             }
         }
 
-	/// TODO: This should be enabled selectively, but not everywhere yet because it would require
-	/// exhaustive @param Javadoc tags throughout.  (Fails on Travis, cannot reproduce locally.)
+	/// TODO: One day we can enable this.  For now, CI jobs require Javadoc on changed lines.
 	// // Turn Javadoc warnings into errors.
 	// tasks.withType(Javadoc) {
 	//     options.addStringOption('Xwerror', '-quiet')
@@ -125,8 +124,11 @@ allprojects {
         // Add standard javac options
         tasks.withType(JavaCompile) {
             dependsOn(':installGitHooks')
-            sourceCompatibility = 1.8
-            targetCompatibility = 1.8
+            sourceCompatibility = 8
+            if (isJava8) {
+                //  option --add-exports not allowed with target 1.8
+                targetCompatibility = 8
+            }
             options.failOnError = true
             options.deprecation = true
             options.compilerArgs += [
@@ -136,7 +138,26 @@ allprojects {
                     "-Xlint:-options",
                     "-Xlint",
             ]
+            if (!isJava8) {
+                options.compilerArgs += [
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                ]
+            }
             options.encoding = 'UTF-8'
+            options.fork = true
+            if (isJava8) {
+                options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}"]
+            }
+            // Don't use error-prone by default
+            options.errorprone.enabled = false
         }
     }
 }
@@ -177,10 +198,19 @@ def createCheckTypeTask(projectName, checker, shortName) {
                 '-processor', "${checker}",
                 '-proc:only',
                 '-Xlint:-processing',
-                "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar"
-        ]
+                ]
+        if (isJava8) {
+            options.compilerArgs += [
+                "-Xbootclasspath/p:${rootDir}/checker/dist/jdk8.jar",
+                "-source",
+                "8",
+                "-target",
+                "8"
+                ]
+        }
     }
 }
+
 /**
  * Returns a list of all the Java files that should be formatted for the given project. These are:
  *
@@ -460,16 +490,16 @@ subprojects {
         // Create a sourcesJar task for each subproject
         tasks.create(name: 'sourcesJar', type: Jar) {
             description 'Creates sources jar.'
-            classifier = 'source'
-            baseName = jar.baseName
+            archiveClassifier = 'source'
+            archiveBaseName = jar.archiveBaseName
             from sourceSets.main.java
         }
 
         // Create a javadocJar task for each subproject
         tasks.create(name: 'javadocJar', type: Jar, dependsOn: 'javadoc') {
             description 'Creates javadoc jar.'
-            classifier = 'javadoc'
-            baseName = jar.baseName
+            archiveClassifier = 'javadoc'
+            archiveBaseName = jar.archiveBaseName
             from tasks.javadoc.destinationDir
         }
 
@@ -479,7 +509,7 @@ subprojects {
             manifest {
                 attributes("Implementation-Version": "${version}")
                 attributes("Implementation-URL": "https://checkerframework.org")
-		if (archiveName != "checker-source.jar") {
+		if (archiveFileName != "checker-source.jar") {
                     attributes('Automatic-Module-Name': "org.checkerframework." + project.name.replaceAll('-', '.'))
                 }
             }
@@ -511,13 +541,28 @@ subprojects {
                                 "-verbose:summary",
                                 "-javacoptions:-g",
                                 "-keywords:!ignore",
-                                '-samevm',
+                                "-samevm",
+                                "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
                                 // Required for checker/jtreg/nullness/PersistUtil.java and other tests
-                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}:" +
-                                        "${tasks.shadowJar.archivePath}:${sourceSets.test.output.asPath}",
-                                "-javacoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
                         ]
-                        if (project.name.is('checker')) {
+                        if (isJava8) {
+                            // Use Error Prone javac and source/target 8
+                            args += [
+                                "-vmoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-javacoptions:-Xbootclasspath/p:${configurations.javacJar.asPath}",
+                                "-javacoptions:-source 8",
+                                "-javacoptions:-target 8"
+                                ]
+                        }
+                        if (project.name.is('framework')) {
+                            // Do not check for the annotated JDK
+                            args += [
+                                    "-javacoptions:-Anocheckjdk"
+                            ]
+                        }
+                        if (isJava8 && project.name.is('checker')) {
+                            // TODO: enable annotated JDK on Java 9+
                             args += [
                                     "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
                             ]
@@ -541,6 +586,20 @@ subprojects {
 
         // Configure JUnit tests
         tasks.withType(Test) {
+            if (!isJava8) {
+                jvmArgs += [
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                    ]
+            }
+
             if (project.name.is('checker')) {
                 dependsOn('copyJarsToDist')
                 systemProperties += [JDK_JAR: "${projectDir}/dist/jdk8.jar"]
@@ -548,6 +607,10 @@ subprojects {
 
             if (project.hasProperty('emit.test.debug')) {
                 systemProperties += ["emit.test.debug": 'true']
+            }
+
+            if (isJava8) {
+                jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}"
             }
 
             testLogging {
@@ -579,12 +642,17 @@ subprojects {
         // Create a runErrorProne task.
         tasks.create(name: 'runErrorProne', type: JavaCompile, group: 'Verification') {
             description 'Run the error-prone compiler on the main sources'
-            toolChain net.ltgt.gradle.errorprone.ErrorProneToolChain.create(project)
+
             source = sourceSets.main.java.asFileTree
             classpath = sourceSets.main.compileClasspath.asFileTree
             destinationDir = new File("${buildDir}", 'errorprone')
 
-            options.compilerArgs = [
+            // Error Prone must be available in the annotation processor path
+            options.annotationProcessorPath = configurations.errorprone
+            // Enable Error Prone
+            options.errorprone.enabled = true
+            options.errorprone.disableWarningsInGeneratedCode = true
+            options.errorprone.errorproneArgs = [
                     // Many compiler classes are interned.
                     '-Xep:ReferenceEquality:OFF',
                     // These might be worth fixing.
@@ -735,8 +803,8 @@ task releaseBuild(type: GradleBuild) {
     description 'Build everything required for a release'
     startParameter = new StartParameter()
     startParameter.setProjectProperties(release: true)
-    // This downloads rather than builds the jdk8.jar because that's what is used in all the Travis tests.
-    tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'checker:allJavadocJar']
+    // This downloads rather than builds the jdk8.jar because that's what is used in the CI tests.
+    tasks = ['clean', 'assemble', 'sourcesJar', 'javadocJar', 'allJavadoc', 'framework:allJavadocJar', 'framework:allSourcesJar', 'checker:allJavadocJar', 'checker:allSourcesJar']
 }
 
 task releaseAndTest(type: GradleBuild, dependsOn: 'releaseBuild') {
